fix: layout dark mode upload file

--- a/src/app/(dashboard)/download-video/preview/[id]/styles/styles.css
+++ b/src/app/(dashboard)/download-video/preview/[id]/styles/styles.css
@@ -1,50 +1,17 @@
-/* .video-compare-container {
-  position: relative;
-} */
-
-.video-wrapper {
-  position: relative;
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-/* .video {
+.video {
   position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
-} */
+}
 
-/* .after {
+.after {
   clip-path: inset(0 0 0 50%);
 }
 
 .video.after {
   clip-path: inset(0 50% 0 0);
   z-index: 2;
-} */
-
-.custom-controls {
-  position: absolute;
-  bottom: 12px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 95%;
-  background: rgba(0, 0, 0, 0.5);
-  padding: 6px 12px;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  z-index: 10;
-}
-
-.play-pause-btn {
-  background: none;
-  border: none;
-  font-size: 18px;
-  color: white;
-  cursor: pointer;
 }
 
 .progress-bar {
@@ -78,61 +45,3 @@
   cursor: pointer;
   border: 2px solid #3b82f6;
 }
-
-
-.duration {
-  color: white;
-  font-size: 13px;
-}
-
-.handle {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background-color: white;
-  z-index: 3;
-  cursor: ew-resize;
-}
-
-.video-wrapper.landscape {
-  width: 100%;
-  max-width: 960px;
-  aspect-ratio: 16 / 9;
-  margin: auto;
-  position: relative;
-  background: black;
-  overflow: hidden;
-}
-
-.video-wrapper.portrait {
-  height: 100vh;
-  width: auto;
-  max-width: 480px;
-  margin: auto;
-  position: relative;
-  background: black;
-  overflow: hidden;
-}
-
-/* .label {
-  position: absolute;
-  padding: 4px 10px;
-  border: 1px solid #666;
-  border-radius: 6px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  font-weight: 600;
-  font-size: 14px;
-  z-index: 10;
-} */
-
-/* .top-left {
-  top: 10px;
-  left: 10px;
-}
-
-.top-right {
-  top: 10px;
-  right: 10px;
-} */
